--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <!-- right side image -->
             <div class="img_area">
-                <img src="http://bit.ly/coderfarhan1" alt="">
+                <img src="https://lh3.googleusercontent.com/NEtTuREbeu_aJpoIw58tqfDtgd3wjC2HyTwfEJKBPF1dAX9c2ZnsRzsoqi4RNZVnTmqaGGbmODVx7FrdMTR_i__tb2zFVc3MCRJiQSMP5f2H3ksLG0LiIka6tbRaW-JNikmkoKhRwCTHzm4ZGqzozV0YoERT-6LoqMWpnwWOrMQSM15I1ke7qjzGDfiDVtQFQeGPtFyf1vihs-bH6PjPgNHkBhbGZI-36t2jMvNmRwYL_WbMXAHMcynBwxpXNEBuyUHwCp2aRoi6n0XPRdvLqcEWgFc0-tjHH0FHWDdy3xZ_m3rWyknXTYo4Ppx451Ro9yMr6uGKJdNqhxkbV2SsytzQ65v1O4sYulM78l97DGVEbTjH1UJuZaeOqYGpyOG8Xuf88CAydP5g_7ADceLgZJDELo9Uz7d70XWA_KmkDKYG-_o119vvLvk-lcEEHji8GmCu3sdQdT_jsnE2U9OsmNAzHMOTvhqwWfe4K3EhnhDrnl8ZjGz03xY1_SR8QUQ98SZ_RCwEumytY282qpy4JJmRay_MbyFipIeTbBFyHubmDCsQRtPij8c3CNJaSDFhvXUIDTpe91fj0L9wS3FLfKeOsx41SSaerP2e9303AlvcH1yWQiesK6ZPtiI58tTUAxuAVSGe-QJ7T6OHs4ntD3jf8Ljs-UEG1jRm5ZOmJbB7sg4k9dbEfpM=w666-h375-no?authuser=0" alt="">
             </div>
         </div>
     </section>
