--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <!-- right side image -->
             <div class="img_area">
-                <img src="https://lh3.googleusercontent.com/1Zmr02bfJOfww7d0RU3Q0r1MuASJhXhC9UW6qWTr7GhW0OkQ-KLF3eFAKQnc3UREsXBMmAqDUTcZpPyJisVdxxM0wTBW3En68WX87-q2kdMuzZOyLFEf7lbFj76WWEvyU_DAlqFskHfTu-gH9qd3nNqsvZFVw2zOctXu5yygnNYcg5pAD9jyeS8jRh4H0E3aW2Zn6IMn6Oh63havXnhloTPwhWOLd0Z8NupRKd4dyCmVA5F43T8XQvkvL7Oc1tfaVxhOQT_aA8-tag8c5IAuG64uTS44AOueYWv8oQesQQx3FLTZvwWo9XlawpxipGBBR99OlAOrURRQYeV5im5zY-cgt2TMCEfO0yMugxnalJGqR32Bj2RAVZ8W1v_UWPA2huA2ivBigHEkPstRIPYb9G1v2z86o8-GZLjlfU6zxGFN1-waJUjlQPbeZnfnaEbYiFzMoz-r2H8yUCPrkMINgQmhiXNrASZnxxtYMuN5ur6TCrpwB0JTFNiJ8iVfXoX8UTMCPVjXdnlor-UEwYG6KgJcXSRIAb7lVraW9Hv2qw3WLbTXVEZbmsoiiCm_tDJkT4UIl5Br6Y_opOkO9-KH1SSLGDr3qF64S0TlJmuv5rcnhihMmL0SHO4BC0PNqZsN4u7g2pZwG7SDf1VhqgWkNgMLG83nnv1gK3z1AHwEZDc3RV8M1n7pmcc=w666-h375-no?authuser=0" alt="">
+                <img src="https://lh3.googleusercontent.com/_r8DwsA0zhalPnI7SZBHe6Do5wYWjhsGGUPuJ895K8ZBYTNMXLxCMCjDN0V_ls5KpuHZverxRbdRO7MdPog1UqTLoU8Pkp2vLMgbYLLxNdXsXuhxvgdNXA4tzGnXxEsa7YaxuT-X=w2400" alt="">
             </div>
         </div>
     </section>
