--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
             </div>
             <!-- right side image -->
             <div class="img_area">
-                <img src="https://lh3.googleusercontent.com/_r8DwsA0zhalPnI7SZBHe6Do5wYWjhsGGUPuJ895K8ZBYTNMXLxCMCjDN0V_ls5KpuHZverxRbdRO7MdPog1UqTLoU8Pkp2vLMgbYLLxNdXsXuhxvgdNXA4tzGnXxEsa7YaxuT-X=w2400"
-                    alt="">
+                <img src="http://callfarhan.cf/cfw1i  alt="">
             </div>
         </div>
     </section>
