--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <!-- right side image -->
             <div class="img_area">
-                <img src="http://callfarhan.cf/cfw1i  alt="">
+                <img src="http://callfarhan.cf/cfw1i"  alt="">
             </div>
         </div>
     </section>
