--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <!-- right side image -->
             <div class="img_area">
-                <img src="http://callfarhan.cf/cfw1i"  alt="">
+                <img src="https://lh3.googleusercontent.com/t5HFUzkXPrDVk0u-OHk9uv6gpTpXaWmsCH6XMeLin84oWahmKLMSO2cI6oszZPk1yfy4kDFI3x2H26ISdJKf3sZYJxBQGzKeJaf5E6RVKQflYN-2IlX5gpn13ohXZ969L5gSh9YY=w2400"  alt="">
             </div>
         </div>
     </section>
