--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </li>
                     <li> <a class="social_links1" href="https://github.com/Farhanintro" target="_blank">Github</a> <img
                             src="icon/github.svg" alt=""> </li>
-                    <li> <a class="social_links2" href="" target="_blank">Instagram</a> <img src="icon/instagram.svg"
+                    <li> <a class="social_links2" href="https://www.instagram.com/farhan_akhtar_coder/" target="_blank">Instagram</a> <img src="icon/instagram.svg"
                             alt=""> </li>
                     <li> <a class="social_links3" href="" target="_blank">Facebook</a> <img src="icon/facebook.svg"
                             alt=""> </li>
